analyzing flt for warnings